[gd_scene load_steps=3 format=3 uid="uid://de0hcc27yrjon"]

[ext_resource type="Script" path="res://scenes/screens/Translation.gd" id="1_idgx2"]
[ext_resource type="PackedScene" uid="uid://dimpfx2ryeb10" path="res://scenes/translator/Google.tscn" id="2_y0u75"]

[node name="Translation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_idgx2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Select translation service and press start to begin automatic translation.

"

[node name="TranslatorOptionButton" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
alignment = 1
item_count = 1
selected = 0
popup/item_0/text = "Select translation service"
popup/item_0/id = 0

[node name="ProgressBar" type="ProgressBar" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CancelButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "Go back"

[node name="BeginButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "Start"

[node name="Google" parent="." instance=ExtResource("2_y0u75")]

[connection signal="item_selected" from="Panel/MarginContainer/VBoxContainer/TranslatorOptionButton" to="." method="_on_translator_option_button_item_selected"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/BeginButton" to="." method="_on_begin_button_pressed"]
[connection signal="translation_progress" from="Google" to="." method="_on_google_translation_progress"]
